--- a/front/pages/room.module.scss
+++ b/front/pages/room.module.scss
@@ -54,11 +54,11 @@ img {
     object-fit: cover;
     position: relative;
 
-    // &.animate {
-    //   animation-name: moving;
-    //   animation-duration: 3s;
-    //   animation-timing-function: ease-in-out;
-    // }
+    &.animate {
+      animation-name: moving;
+      animation-duration: 3s;
+      animation-timing-function: ease-in-out;
+    }
 
     @media (max-width: 1000px) {
       width: auto;
@@ -78,15 +78,15 @@ img {
 
 @keyframes moving {
   from {
-      left: 0;
+    left: 0;
   }
 
   25% {
-      left: -42rem;
+      left: -60rem;
   }
 
   50% {
-      left: 10rem;
+      left: 20rem;
   }
 
   75% {
